--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MakeCharacterClass"></activity>
+        <activity android:name=".MakeCharacterStats"></activity>
+        <activity android:name=".MakeCharacterClass" />
         <activity android:name=".AboutUs" />
         <activity android:name=".MakeCharacterName" />
         <activity android:name=".MainActivity">
