--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MakeCharacterEquipment"></activity>
+        <activity android:name=".MakeCharacterSkills"></activity>
+        <activity android:name=".MakeCharacterEquipment" />
         <activity android:name=".MakeCharacterLevel" />
         <activity android:name=".MakeCharacterStats" />
         <activity android:name=".MakeCharacterClass" />
